@@ -2,7 +2,7 @@
  * fsglob.c - global variables for the file system
  *
  * Copyright (c) 2001 Lineo, Inc.
- *               2002 - 2010 The EmuTOS development team
+ *               2002 - 2014 The EmuTOS development team
  *
  * This file is distributed under the GPL, version 2 or at your
  * option any later version.  See doc/license.txt for details.
@@ -61,11 +61,3 @@ long errcode;
 
 int errdrv;
 jmp_buf errbuf;
-
-
-
-/*
- * time - , date - who knows why this is here?
- */
-
-unsigned int    time, date ;
