@@ -1,7 +1,7 @@
 /*
  * time.h - GEMDOS time and date functions
  *
- * Copyright (c) 2002 the EmuTOS development team
+ * Copyright (c) 2002-2014 the EmuTOS development team
  *
  * This file is distributed under the GPL, version 2 or at your
  * option any later version.  See doc/license.txt for details.
@@ -10,7 +10,9 @@
 #ifndef TIME_H
 #define TIME_H
 
-extern int time, date;
+#include "portab.h"
+
+extern UWORD time, date;
 
 long xgetdate(void);
 long xsetdate(int d);
